artifacts/logs/demo_output_production_final.log
Build profile: -w ghc-9.10.3 -O1
In order, the following will be built (use -v for more details):
 - h-rich-0.1.0.0 (lib) (first run)
 - h-rich-0.1.0.0 (exe:h-rich-demo) (configuration changed)
Preprocessing library for h-rich-0.1.0.0...
Building library for h-rich-0.1.0.0...
[16 of 18] Compiling HRich.Log        ( src/HRich/Log.hs, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Log.o, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Log.dyn_o )
src/HRich/Log.hs:33:1: error: [GHC-87110]
    Could not load module ‘Data.Time’.
    It is a member of the hidden package ‘time-1.12.2’.
    Perhaps you need to add ‘time’ to the build-depends in your .cabal file.
    Use -v to see a list of the files searched for.
   |
33 | import Data.Time (getCurrentTime, formatTime, defaultTimeLocale)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

[17 of 18] Compiling HRich.Traceback  ( src/HRich/Traceback.hs, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Traceback.o, /home/jhhuh/Sync/proj/h-rich/h-rich/dist-newstyle/build/x86_64-linux/ghc-9.10.3/h-rich-0.1.0.0/build/HRich/Traceback.dyn_o ) [Source file changed]
Error: [Cabal-7125]
Failed to build h-rich-0.1.0.0 (which is required by exe:h-rich-demo from h-rich-0.1.0.0).

